# WebGPUTest

./: .gitmodules  CMakeLists.txt  application.cpp  application.h  main.cpp  utils.cpp  utils.h
.github/workflows/: build.yml
cmake/: CompilerCache.cmake  FetchDawn.cmake
glfw3webgpu/: CMakeLists.txt
shaders/: compute.wgsl  shader.wgsl
